my-hello-service/openshift/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-hello-service
spec:
  hosts:
    - "my-hello-istio-system.apps.cluster-95cf7.95cf7.sandbox882.opentlc.com"
  gateways:
    -  my-gateway/my-https
  http:
    - route:
        - destination:
            host: my-hello-service
            port:
              number: 8081
